--- a/frontend/src/projects/app/container/ecu-wallet/ecu-wallet.component.html
+++ b/frontend/src/projects/app/container/ecu-wallet/ecu-wallet.component.html
@@ -8,7 +8,7 @@
 </div>
 
 <div class="grow shrink-0 basis-[680px] flex flex-col h-[680px]">
-  <app-column-container [title]="'NJ Wallet'">
+  <app-column-container [title]="'Wallet'">
     <div class="h-full">
       <app-wallet-table-history [dataSource]="dataSource" [skeleton]="false">
       </app-wallet-table-history>
