new update ui design

--- a/frontend/src/projects/app/components/app-logo/app-logo.component.html
+++ b/frontend/src/projects/app/components/app-logo/app-logo.component.html
@@ -1,5 +1,5 @@
 <div
-class="min-w-[66px] p-4 bg-gradient-to-tl from-primary to-accent-700"
+class="min-w-[66px] p-4 bg-black"
 >
 <div class="h-8 flex gap-1 items-center text-black" [class.justify-center]="!expanded">
     <img
