--- a/frontend/src/projects/app/components/balance-card/balance-card.component.html
+++ b/frontend/src/projects/app/components/balance-card/balance-card.component.html
@@ -1,8 +1,8 @@
-<div class="flex flex-wrap gap-4 mt-4">
+<div class="w-full">
   <div
-    class="border rounded-lg p-4 w-full text-center bg-gray-50 dark:bg-gray-900 dark:text-gray-400 font-display"
+    class="border rounded-lg p-3 sm:p-3 md:p-4 lg:p-4 xl:p-4 2xl:p-4 w-90 text-center bg-gray-50 dark:bg-gray-900 dark:text-gray-400 font-display"
   >
-    <p class="text-xl font-semibold">{{ amount() }}</p>
-    <p class="text-xs text-gray-500 dark:text-gray-700">{{ label() }}</p>
+    <p class="text-lg sm:text-lg md:text-xl lg:text-xl xl:text-xl 2xl:text-xl font-semibold">{{ amount() }}</p>
+    <p class="text-xs sm:text-xs md:text-xs lg:text-xs xl:text-xs 2xl:text-xs text-gray-500 dark:text-gray-700">{{ label() }}</p>
   </div>
 </div>
