--- a/frontend/src/projects/app/components/geonology-tree/geonology-tree.component.html
+++ b/frontend/src/projects/app/components/geonology-tree/geonology-tree.component.html
@@ -48,13 +48,13 @@
               }}"
             >
               <span class="font-medium text-green-600 dark:!text-green-500">
-                {{ userNode()!.leftDownline }}</span
+                {{ userNode()!.leftPoints }}</span
               >
               <span class="text-muted-foreground mx-1 dark:text-gray-300"
                 >|</span
               >
               <span class="font-medium text-purple-600">
-                {{ userNode()!.rightDownline }}
+                {{ userNode()!.rightPoints }}
               </span>
             </div>
           </div>
